@@ -1,5 +1,6 @@
 package com.localbrand.controller;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -21,6 +22,8 @@ import com.localbrand.dtos.response.CategoryFullDto;
 import com.localbrand.dtos.response.ResponseDto;
 import com.localbrand.service.ICategoryService;
 
+import jakarta.validation.Valid;
+
 @RestController
 @RequestMapping("/category")
 public class CategoryController {
@@ -29,76 +32,100 @@ public class CategoryController {
 
 	@GetMapping("")
 	public ResponseEntity<?> getAll() {
-		try {
-			List<CategoryDto> result = categoryService.getAll();
-			return ResponseEntity.ok(new ResponseDto(List.of("Danh sách danh mục"), HttpStatus.OK.value(), result));
-		} catch (Exception e) {
-			return ResponseEntity.ok(new ResponseDto(List.of("Không tìm thấy danh sách danh mục"), HttpStatus.BAD_REQUEST.value(), null));
-		}
+		List<CategoryDto> result = categoryService.getAll();
+		return ResponseEntity.ok(new ResponseDto(List.of(""), HttpStatus.OK.value(), result));
 	}
 
 	@GetMapping("/{id}")
 	public ResponseEntity<?> getById(@PathVariable String id) {
-		try {
-			CategoryDto result = categoryService.getById(id);
-			if (result != null) {
-				return ResponseEntity.ok(new ResponseDto(List.of("Danh mục có ID là: " + id), HttpStatus.OK.value(), result));
-			}
-			return ResponseEntity.ok(new ResponseDto(List.of("Không tìm thấy danh mục có ID là: " + id), HttpStatus.BAD_REQUEST.value(), result));
-		} catch (Exception e) {
-			return ResponseEntity.ok(new ResponseDto(List.of("Không tìm thấy danh mục "), HttpStatus.BAD_REQUEST.value(), null));
-		}
+		CategoryDto result = categoryService.getById(id);
+		
+		ResponseEntity<?> res  = result != null ? ResponseEntity.ok(new ResponseDto(Arrays.asList(""), HttpStatus.OK.value(), result))
+                : ResponseEntity.badRequest().body(new ResponseDto(Arrays.asList("Danh mục không tồn tại"), HttpStatus.BAD_REQUEST.value(), ""));		
+		return res;
 	}
 	
 	@GetMapping("/get-full/{id}")
 	public ResponseEntity<?> getFullById(@PathVariable String id) {
-		try {
-			CategoryFullDto result = categoryService.getFull(id);
-			return ResponseEntity.ok(new ResponseDto(List.of("Danh mục có ID là " + id), HttpStatus.OK.value(), result));
-		} catch (Exception e) {
-			return ResponseEntity.ok(new ResponseDto(List.of("Không tìm thấy danh mục " + id), HttpStatus.BAD_REQUEST.value(), null));
-		}
+		CategoryFullDto result = categoryService.getFull(id);
+		
+		ResponseEntity<?> res  = result != null ? ResponseEntity.ok(new ResponseDto(Arrays.asList(""), HttpStatus.OK.value(), result))
+                : ResponseEntity.badRequest().body(new ResponseDto(Arrays.asList("Danh mục không tồn tại"), HttpStatus.BAD_REQUEST.value(), ""));		
+		return res;
 	}
 
 	@PostMapping("/insert")
-	public ResponseEntity<?> insert(@RequestBody CategoryDto categoryDto) {
-		try {
-			if (categoryService.isUsingName(categoryDto.getName())) {
-				return ResponseEntity.ok(new ResponseDto(List.of("Tên danh mục đã được sử dụng"), HttpStatus.BAD_REQUEST.value(), null));
-			}
-			CategoryDto result = categoryService.insert(categoryDto);
-			return ResponseEntity.ok(new ResponseDto(List.of("Thêm danh mục thành công"), HttpStatus.OK.value(), result));
-		} catch (Exception e) {
-			return ResponseEntity.ok(new ResponseDto(List.of("Thêm danh mục thất bại"), HttpStatus.BAD_REQUEST.value(), null));
-		}
+	public ResponseEntity<?> insert(@Valid @RequestBody CategoryDto categoryDto) {
+        List<String> msg = insertValidation(categoryDto);
+        if (msg.size() > 0) {
+            return ResponseEntity.badRequest().body(new ResponseDto(msg, HttpStatus.BAD_REQUEST.value(), ""));
+        }
+        
+		CategoryDto result = categoryService.insert(categoryDto);		
+		ResponseEntity<?> res  = result != null ? ResponseEntity.ok(new ResponseDto(Arrays.asList("Thêm danh mục thành công"), HttpStatus.OK.value(), result))
+                : ResponseEntity.badRequest().body(new ResponseDto(Arrays.asList("Thêm danh mục thất bại"), HttpStatus.BAD_REQUEST.value(), null));		
+		return res;
 	}
 
 	@PutMapping("/update")
 	public ResponseEntity<?> update(@RequestBody CategoryDto categoryDto) {
-		try {
-			if (categoryService.isUsingName(categoryDto.getName())) {
-				return ResponseEntity.ok(new ResponseDto(List.of("Tên danh mục đã được sử dụng"), HttpStatus.BAD_REQUEST.value(), null));
-			}
-			CategoryDto result = categoryService.update(categoryDto);
-			return ResponseEntity.ok(new ResponseDto(List.of("Sửa danh mục thành công"), HttpStatus.OK.value(), result));
-		} catch (Exception e) {
-			return ResponseEntity.ok(new ResponseDto(List.of("Sửa danh mục thất bại"), HttpStatus.BAD_REQUEST.value(), null));
-		}
+        List<String> msg = updateValidation(categoryDto);
+        if (msg.size() > 0) {
+            return ResponseEntity.badRequest().body(new ResponseDto(msg, HttpStatus.BAD_REQUEST.value(), ""));
+        }
+        
+		CategoryDto result = categoryService.update(categoryDto);
+		ResponseEntity<?> res  = result != null ? ResponseEntity.ok(new ResponseDto(Arrays.asList("Cập nhật danh mục thành công"), HttpStatus.OK.value(), result))
+                : ResponseEntity.badRequest().body(new ResponseDto(Arrays.asList("Cập nhật danh mục thất bại"), HttpStatus.BAD_REQUEST.value(), null));		
+		return res;
 	}
 	
 	@DeleteMapping("/delete")
 	public ResponseEntity<?> deleteById(@RequestParam String id) {
-		try {
-			if(categoryService.isUsing(id))
-			{
-				return ResponseEntity.ok(new ResponseDto(List.of("Danh mục đang được sử dụng"), HttpStatus.OK.value(), null));
-			}
-			else {
-				categoryService.deleteById(id);
-				return ResponseEntity.ok(new ResponseDto(List.of("Xóa danh mục thành công"), HttpStatus.OK.value(), null));
-			}
-		} catch (Exception e) {
-			return ResponseEntity.ok(new ResponseDto(List.of("Xóa danh mục thất bại"), HttpStatus.BAD_REQUEST.value(), null));
-		}
+        List<String> msg = deleteValidation(id);
+        if (msg.size() > 0) {
+            return ResponseEntity.badRequest().body(new ResponseDto(msg, HttpStatus.BAD_REQUEST.value(), ""));
+        }
+        
+		boolean result = categoryService.deleteById(id);
+		ResponseEntity<?> res  = result ? ResponseEntity.ok(new ResponseDto(Arrays.asList("Xóa danh mục thành công"), HttpStatus.OK.value(), result))
+                : ResponseEntity.badRequest().body(new ResponseDto(Arrays.asList("Xóa danh mục thất bại"), HttpStatus.BAD_REQUEST.value(), null));
+		return res;
+	
 	}
+	
+    private List<String> insertValidation(CategoryDto categoryDto) {
+        List<String> result = new ArrayList<>();
+
+        if (categoryService.isExistName(categoryDto.getName())) {
+            result.add("Tên đã tồn tại");
+        }
+
+        return result;
+    }
+	
+    private List<String> updateValidation(CategoryDto categoryDto) {
+        List<String> result = new ArrayList<>();
+        
+        if (categoryDto.getId().isBlank()) {
+            result.add("Vui lòng thêm id danh mục");
+            return result;
+        }
+
+        if (categoryService.isExistNameIgnore(categoryDto.getName(), categoryDto.getId())) {
+            result.add("Tên đã tồn tại");
+        }
+
+        return result;
+    }
+	
+    private List<String> deleteValidation(String categoryId) {
+        List<String> result = new ArrayList<>();
+
+        if (categoryService.isUsing(categoryId)) {
+            result.add("Danh mục đang được sử dụng");
+        }
+
+        return result;
+    }
 }
